--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <argument
             android:name="movieId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_detailFragment_to_trailerFragment"
+            app:destination="@id/trailerFragment" />
     </fragment>
     <fragment
         android:id="@+id/upcomingFragment"
@@ -34,5 +37,14 @@
         <action
             android:id="@+id/action_upcomingFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trailerFragment"
+        android:name="com.example.homework17.TrailerFragment"
+        android:label="fragment_trailer"
+        tools:layout="@layout/fragment_trailer" >
+        <argument
+            android:name="id"
+            app:argType="integer" />
     </fragment>
 </navigation>
