--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -29,13 +29,13 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="10dp"
             android:text="Movie Story :"
             android:textSize="20sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_show_trailer" />
 
         <TextView
             android:id="@+id/textView4"
@@ -56,10 +56,24 @@
             android:layout_marginBottom="2dp"
             android:backgroundTint="@color/purple_200"
             android:drawableLeft="@drawable/ic_baseline_star_24"
-            android:text="@{Integer.valueOf(vModel.movie.vote_count).toString()}"
+            android:text="@{Integer.valueOf(vModel.movie.vote_average).toString()}"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="@+id/imageView2" />
+
+        <Button
+            android:id="@+id/btn_show_trailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="28dp"
+            android:text="Trailer"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:drawableLeft="@drawable/ic_baseline_play_circle_24"
+            android:backgroundTint="@color/purple_200"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
