--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -56,7 +56,7 @@
             android:layout_marginBottom="2dp"
             android:backgroundTint="@color/purple_200"
             android:drawableLeft="@drawable/ic_baseline_star_24"
-            android:text="@{Integer.valueOf(vModel.movie.vote_average).toString()}"
+            android:text="@{Double.valueOf(vModel.movie.vote_average).toString()}"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="@+id/imageView2" />
